--- a/res/values/pa_strings.xml
+++ b/res/values/pa_strings.xml
@@ -23,4 +23,17 @@
     <string name="notifications_no_floating">No floating</string>
     <string name="notifications_four_items"><xliff:g id="notif_state" example="Priority">%1$s</xliff:g> / <xliff:g id="notif_state" example="Priority">%2$s</xliff:g> / <xliff:g id="notif_state" example="Priority">%3$s</xliff:g> / <xliff:g id="notif_state" example="Priority">%4$s</xliff:g></string>
 
+    <!-- Status bar - Battery -->
+    <string name="battery_style_title">Battery status style</string>
+    <string name="battery_style_icon_portrait">Icon portrait</string>
+    <string name="battery_style_icon_landscape">Icon landscape</string>
+    <string name="battery_style_circle">Circle</string>
+    <string name="battery_style_text">Text</string>
+    <string name="battery_style_hidden">Hidden</string>
+
+    <!-- Status bar - Battery percentage -->
+    <string name="battery_percentage_title">Battery percentage</string>
+    <string name="battery_percentage_default">Hidden (default)</string>
+    <string name="battery_percentage_text_inside">Inside the icon</string>
+    <string name="battery_percentage_text_next">Next to the icon</string>
 </resources>
