--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -24,6 +24,12 @@
 
     <!-- Status bar tweaks -->
     <PreferenceScreen
+        android:key="status_bar_carrier_label_settings"
+        android:title="@string/status_bar_carrier_label_settings_title"
+        android:summary="@string/status_bar_carrier_label_settings_summary"
+        android:fragment="com.android.settings.darkkat.StatusBarCarrierLabelSettings" />
+
+    <PreferenceScreen
 	android:key="network_traffic_state"
 	android:fragment="com.android.settings.zephyr.NetworkTraffic"
 	android:summary="@string/network_traffic_summary"
