Reset battery stats [2/2]
Change-Id: I85fa89c4790f0c85257f64f10e392b0584593e97

Conflicts:
	src/com/android/settings/fuelgauge/PowerUsageSummary.java

Conflicts:
	res/values/zephyr_strings.xml

Conflicts:
	res/values/zephyr_strings.xml

--- a/res/values/zephyr_strings.xml
+++ b/res/values/zephyr_strings.xml
@@ -862,4 +862,8 @@
 
    <!-- Kernel Auditor -->
    <string name="kernel_tweaker">Performance</string>
+
+    <!-- Battery stats reset -->
+    <string name="battery_stats_reset">Reset stats</string>
+    <string name="battery_stats_message">Battery history stats are going to be reset</string>
 </resources>
