--- a/res/values/zephyr_strings.xml
+++ b/res/values/zephyr_strings.xml
@@ -486,6 +486,7 @@
     <string name="quick_settings_navigation_bar">Navigation bar</string>
     <string name="qs_tile_floating">Peek</string>
     <string name="qs_action_delete">Delete</string>
+    <string name="qs_tile_nfc">NFC</string>
     <string name="qs_action_add">Add</string>
     <string name="qs_action_no_more_tiles">No more tiles available</string>
     <string name="quick_settings_reset_message">Reset quick settings tiles?</string>
