--- a/res/values/zephyr_strings.xml
+++ b/res/values/zephyr_strings.xml
@@ -489,6 +489,7 @@
     <string name="qs_tile_nfc">NFC</string>
     <string name="qs_tile_compass">Compass</string>
     <string name="qs_tile_sync">Sync</string>
+    <string name="qs_battery_saver_tile">Battery saver</string>
     <string name="qs_action_add">Add</string>
     <string name="qs_action_no_more_tiles">No more tiles available</string>
     <string name="quick_settings_reset_message">Reset quick settings tiles?</string>
