--- a/res/xml/navigation_bar_settings.xml
+++ b/res/xml/navigation_bar_settings.xml
@@ -45,6 +45,7 @@
     <PreferenceScreen
        android:key="hardwarekeys_settings"
        android:fragment="com.android.settings.slim.HardwareKeysSettings"
-       android:title="@string/button_keys_title" />
+       android:title="@string/button_keys_title" 
+       android:summary="@string/button_keys_summary" />
 </PreferenceScreen>
 
