--- a/res/values/zephyr_strings.xml
+++ b/res/values/zephyr_strings.xml
@@ -492,6 +492,7 @@
     <string name="qs_battery_saver_tile">Battery saver</string>
     <string name="qs_tile_ambient_display">Ambient display</string>
     <string name="qs_expanded_desktop_tile">Expanded desktop</string>
+    <string name="qs_tile_music">Music</string>
     <string name="qs_action_add">Add</string>
     <string name="qs_action_no_more_tiles">No more tiles available</string>
     <string name="quick_settings_reset_message">Reset quick settings tiles?</string>
