--- a/res/xml/pulse_settings.xml
+++ b/res/xml/pulse_settings.xml
@@ -54,45 +54,57 @@
             android:key="pulse_fading_bars_category"
             android:title="@string/pulse_legacy_mode_advanced_category">
 	
-	 <ListPreference
-           android:key="pulse_custom_dimen"
-           android:title="@string/pulse_custom_dimen"
-           android:dialogTitle="@string/pulse_custom_dimen"
-           android:entries="@array/pulse_custom_dimen_entries"
-           android:entryValues="@array/pulse_custom_dimen_values"
-           android:dependency="eos_fling_show_pulse" />	 
-	 	
-	 <ListPreference
-           android:key="pulse_custom_div"
-           android:title="@string/pulse_custom_div"
-           android:dialogTitle="@string/pulse_custom_div"
-           android:entries="@array/pulse_custom_div_entries"
-           android:entryValues="@array/pulse_custom_div_values"
-           android:dependency="eos_fling_show_pulse" />
-	 
-	 <ListPreference
-           android:key="pulse_filled_block_size"
-           android:title="@string/pulse_filled_block_size"
-           android:dialogTitle="@string/pulse_filled_block_size"
-           android:entries="@array/pulse_filled_block_size_entries"
-           android:entryValues="@array/pulse_filled_block_size_values"
-           android:dependency="eos_fling_show_pulse" />
-	 
-	<ListPreference
-           android:key="pulse_empty_block_size"
-           android:title="@string/pulse_empty_block_size"
-           android:dialogTitle="@string/pulse_empty_block_size"
-           android:entries="@array/pulse_empty_block_size_entries"
-           android:entryValues="@array/pulse_empty_block_size_values"
-           android:dependency="eos_fling_show_pulse" />
-	
-	<ListPreference
-           android:key="pulse_custom_fudge_factor"
-           android:title="@string/pulse_custom_fudge_factor"
-           android:dialogTitle="@string/pulse_custom_fudge_factor"
-           android:entries="@array/pulse_custom_fudge_factor_entries"
-           android:entryValues="@array/pulse_custom_fudge_factor_values"
-           android:dependency="eos_fling_show_pulse" />
+      <com.android.settings.chameleonos.SeekBarPreference
+            android:key="pulse_custom_dimen"
+            android:title="@string/pulse_custom_dimen"
+            android:max="19"
+            settings:min="0"
+            settings:unitsLeft=""
+            settings:unitsRight="px"
+	    settings:defaultVal="7"
+            android:persistent="false" />
+
+      <com.android.settings.chameleonos.SeekBarPreference
+            android:key="pulse_custom_div"
+            android:title="@string/pulse_custom_div"
+            android:max="8"
+            settings:min="0"
+            settings:unitsLeft=""
+            settings:unitsRight="px"
+            settings:defaultVal="0"
+            android:persistent="false" />
+
+      <com.android.settings.chameleonos.SeekBarPreference
+            android:key="pulse_filled_block_size"
+            android:title="@string/pulse_filled_block_size"
+            android:max="4"
+            settings:min="0"
+            settings:unitsLeft=""
+            settings:unitsRight="px"
+            settings:defaultVal="2"
+            android:persistent="false" />
+
+
+      <com.android.settings.chameleonos.SeekBarPreference
+            android:key="pulse_empty_block_size"
+            android:title="@string/pulse_empty_block_size"
+            android:max="4"
+            settings:min="0"
+            settings:unitsLeft=""
+            settings:unitsRight="px"
+	    settings:defaultVal="1"
+            android:persistent="false" />
+
+
+      <com.android.settings.chameleonos.SeekBarPreference
+            android:key="pulse_custom_fudge_factor"
+            android:title="@string/pulse_custom_fudge_factor"
+            android:max="4"
+            settings:min="0"
+            settings:unitsLeft=""
+            settings:unitsRight=""
+	    settings:defaultVal="2"
+            android:persistent="false" />
 
         <com.android.settings.chameleonos.SeekBarPreference
             android:key="fling_pulse_lavalamp_speed"
@@ -109,13 +121,15 @@
             android:key="pulse_2"
             android:title="@string/pulse_solid_dimen_category" >
 
-	<ListPreference
-           android:key="pulse_solid_fudge_factor"
-           android:title="@string/pulse_solid_fudge_factor"
-           android:dialogTitle="@string/pulse_solid_fudge_factor"
-           android:entries="@array/pulse_solid_fudge_factor_entries"
-           android:entryValues="@array/pulse_solid_fudge_factor_values"
-           android:dependency="eos_fling_show_pulse" />
+      <com.android.settings.chameleonos.SeekBarPreference
+            android:key="pulse_solid_fudge_factor"
+            android:title="@string/pulse_solid_fudge_factor"
+            android:max="7"
+            settings:min="0"
+            settings:unitsLeft=""
+            settings:unitsRight=""
+	    settings:defaultVal="0"
+            android:persistent="false" />
 
       <com.android.settings.chameleonos.SeekBarPreference
             android:key="lavamp_solid_speed"
@@ -124,6 +138,7 @@
             settings:minimum="200"
             settings:unitsLeft=""
             settings:unitsRight="ms"
+            settings:defaultVal="1000"
             android:persistent="false" />
 	
     </PreferenceCategory>
