--- a/res/values/zephyr_strings.xml
+++ b/res/values/zephyr_strings.xml
@@ -853,4 +853,7 @@
     <string name="factor3">Hyper</string>
     <string name="factor4">Insane</string>
     <string name="pulse_custom_fudge_factor">Visualizer Sanity Level</string>
+
+   <!-- Kernel Auditor -->
+   <string name="kernel_tweaker">Performance</string>
 </resources>
