Settings:Pulse-Update Legacy Dimens and Bar Spacing Resources[2/2]
-update defaults too

Change-Id: I17c88ab7c8ae8aad8a7460c3f302c798ed7ddf2e
Signed-off-by: Varun Date <date.varun123@gmail.com>

Conflicts:
	res/xml/pulse_settings.xml
	src/com/android/settings/custom/nav/PulseSettings.java

--- a/res/xml/pulse_settings.xml
+++ b/res/xml/pulse_settings.xml
@@ -57,8 +57,8 @@
       <com.android.settings.chameleonos.SeekBarPreference
             android:key="pulse_custom_dimen"
             android:title="@string/pulse_custom_dimen"
-            android:max="19"
-            settings:min="0"
+            android:max="30"
+            settings:min="1"
             settings:unitsLeft=""
             settings:unitsRight="px"
 	    settings:defaultVal="7"
@@ -67,10 +67,10 @@
       <com.android.settings.chameleonos.SeekBarPreference
             android:key="pulse_custom_div"
             android:title="@string/pulse_custom_div"
-            android:max="8"
+            android:max="15"
             settings:min="0"
             settings:unitsLeft=""
-            settings:unitsRight="px"
+            settings:unitsRight=""
             settings:defaultVal="0"
             android:persistent="false" />
 
