--- a/res/layout/qs_item.xml
+++ b/res/layout/qs_item.xml
@@ -25,8 +25,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="4dp"
-        android:background="@color/qs_tile_default_background_color">
+        android:padding="4dp">
 
         <ImageView
             android:id="@android:id/icon"
@@ -38,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textColor="@color/qs_text_color"
+            android:textAppearance="@android:style/TextAppearance.Material.Body1"
             android:gravity="center_horizontal"/>
 
     </LinearLayout>
