--- a/res/xml/notification_drawer_settings.xml
+++ b/res/xml/notification_drawer_settings.xml
@@ -49,13 +49,13 @@
         android:title="@string/qs_four_columns_title"
         android:defaultValue="false" />
 
-    <PreferenceScreen
+   <!-- PreferenceScreen
             android:title="@string/status_bar_icon_blacklist_title"
             android:summary="@string/status_bar_icon_blacklist_summary" >
         <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.tuner.TunerActivity" />
-    </PreferenceScreen>
+    </PreferenceScreen> -->
 
         <com.android.settings.preference.SystemSettingSwitchPreference
             android:key="status_bar_custom_header"
