--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -22,6 +22,11 @@
         android:summary="@string/status_bar_quick_qs_pulldown_summary"
         android:defaultValue="true" />
 
+    <com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="enable_task_manager"
+            android:title="@string/enable_task_manager_title"
+            android:summary="@string/enable_task_manager_summary" />
+
     <!-- Status bar tweaks -->
     <PreferenceScreen
         android:key="status_bar_carrier_label_settings"
