--- a/res/xml/advanced_screen_display_settings.xml
+++ b/res/xml/advanced_screen_display_settings.xml
@@ -27,7 +27,7 @@
         android:key="screen_resolution"
         android:title="@string/adavnced_screen_settings_resolution"
         android:summary="@string/advanced_screen_settings_resolution_summary"
-        android:summary="com.android.settings.rizzu.AdvancedScreenResolutionSettings" />
+        android:summary="com.android.settings.rizzu.AdvancedScreenResolutionSettings">
         </PreferenceScreen>
 </PreferenceCategory>
 </PreferenceScreen>
