--- a/res/values/zephyr_strings.xml
+++ b/res/values/zephyr_strings.xml
@@ -92,7 +92,7 @@
     <string name="advanced_screen_settings_category">DPI and Resolution</string>
     <string name="advanced_screen_settings_resolution">Screen Resolution</string>
     <string name="advanced_screen_settings_resolution_summary">Change your screen resolution to enhance your visual experience!</string>
-    <string name="stream_in_screen_resolution">Enter Screen Resolution</string>
+    <string name="stream_in_screen_resolution">Custom Screen Resolution</string>
     <string name="stream_in_screen_resolution_description">Enter your desired screen resolution is this format - (\'width\'x\'height\') excluding the brackets and the apsotrophe!\n\nExample - 1080x1920 - including the \'x\' in between the dimensions!</string>
 
     <!--ILLUMINATI-->
